[gd_scene load_steps=28 format=3 uid="uid://bbc5bjlgpje61"]

[ext_resource type="Script" path="res://Scripts/boss_parry.gd" id="1_www0x"]
[ext_resource type="Shader" uid="uid://bkw0jb7jwlu8q" path="res://Scenes/Damage.tres" id="2_rqi3c"]
[ext_resource type="Texture2D" uid="uid://dpv1br8drwgsb" path="res://Assests/sprites/Bottom_SpriteSheet_Green.png" id="3_hth7k"]
[ext_resource type="Texture2D" uid="uid://ckllneic3qs2x" path="res://Assests/sprites/Top_SpriteSheet_Green.png" id="4_8pt3l"]
[ext_resource type="AudioStream" uid="uid://j5cowbqqajvx" path="res://Parry.wav" id="5_glegd"]
[ext_resource type="PackedScene" uid="uid://cpaxy0xmofuam" path="res://Scenes/Death_Screen.tscn" id="6_lqxmd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nlg4q"]
resource_local_to_scene = true
shader = ExtResource("2_rqi3c")
shader_parameter/BooleanParameter = true
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcxro"]
atlas = ExtResource("3_hth7k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tysh1"]
atlas = ExtResource("4_8pt3l")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t88s7"]
atlas = ExtResource("4_8pt3l")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixdvo"]
atlas = ExtResource("4_8pt3l")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66yx2"]
atlas = ExtResource("4_8pt3l")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijtlu"]
atlas = ExtResource("4_8pt3l")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxqq4"]
atlas = ExtResource("4_8pt3l")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_toyso"]
atlas = ExtResource("4_8pt3l")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3knv"]
atlas = ExtResource("4_8pt3l")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cykcv"]
atlas = ExtResource("4_8pt3l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_faqlk"]
atlas = ExtResource("4_8pt3l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t2l7"]
atlas = ExtResource("4_8pt3l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkyyr"]
atlas = ExtResource("4_8pt3l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehevn"]
atlas = ExtResource("4_8pt3l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xobc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcxro")
}],
"loop": true,
"name": &"LEGS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tysh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t88s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixdvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66yx2")
}],
"loop": false,
"name": &"Parry",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijtlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxqq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toyso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3knv")
}],
"loop": false,
"name": &"Shooting",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cykcv")
}],
"loop": true,
"name": &"Stagger",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faqlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t2l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkyyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehevn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_peh0e"]
resource_local_to_scene = true
shader = ExtResource("2_rqi3c")
shader_parameter/BooleanParameter = true
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkafb"]
size = Vector2(38.6667, 53.6667)

[sub_resource type="Animation" id="Animation_njqv4"]
resource_name = "HitFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BottomSprite:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/BooleanParameter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tux8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BottomSprite:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/BooleanParameter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e66ai"]
_data = {
"HitFlash": SubResource("Animation_njqv4"),
"RESET": SubResource("Animation_tux8x")
}

[node name="CharacterBody2D2" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_www0x")

[node name="BottomSprite" type="AnimatedSprite2D" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_nlg4q")
position = Vector2(-2.99976, 44.0002)
scale = Vector2(-3, 3)
sprite_frames = SubResource("SpriteFrames_xobc3")
animation = &"LEGS"
autoplay = "LEGS"

[node name="TopSprite" type="AnimatedSprite2D" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_peh0e")
position = Vector2(-14.9998, 4.00024)
rotation = 3.14159
scale = Vector2(3, -3)
sprite_frames = SubResource("SpriteFrames_xobc3")
animation = &"Parry"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 12.5)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_gkafb")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-106, 0)
rotation = -3.15734
scale = Vector2(3, 3)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StaggerTime" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Timer_Outro" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_Intro" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Marker_Sus" type="Marker2D" parent="."]
position = Vector2(-78, -45)
rotation = -3.14278
scale = Vector2(3.36741, 3.36741)

[node name="Marker_Jos" type="Marker2D" parent="."]
position = Vector2(-79, 53)
rotation = 3.13689
scale = Vector2(2.96871, 2.96871)

[node name="HitFlash" type="AnimationPlayer" parent="."]
root_node = NodePath("../TopSprite")
libraries = {
"": SubResource("AnimationLibrary_e66ai")
}
autoplay = "HitFlash"

[node name="Parry_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_glegd")
volume_db = 10.0

[node name="Control" parent="." instance=ExtResource("6_lqxmd")]
modulate = Color(1, 1, 1, 0)
offset_left = -1682.0
offset_top = -1004.0
offset_right = -1642.0
offset_bottom = -964.0
scale = Vector2(37.3971, 22.8272)
